radv,aco: CTS image robustness tests fail to compile
dEQP-VK.robustness.image_robustness.bind.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.image_robustness.bind.notemplate.rg32ui.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.image_robustness.push.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.image_robustness.push.notemplate.rg32ui.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.robustness2.bind.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.robustness2.bind.notemplate.rg32ui.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.robustness2.push.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.robustness2.push.notemplate.rg32ui.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
dEQP-VK.robustness.robustness2.push.notemplate.rg32f.unroll.volatile.storage_buffer.no_fmt_qual.len_35.samples_1.1d.comp
./deqp-vk -n dEQP-VK.robustness.image_robustness.bind.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp
Writing test log into TestResults.qpa
dEQP Core git-fb86cfb19849570ccc6b4dc5aa0fe0e35432d442 (0xfb86cfb1) starting..
target implementation = 'Default'
Test case 'dEQP-VK.robustness.image_robustness.bind.notemplate.rg32i.unroll.nonvolatile.storage_image.fmt_qual.img.samples_4.2d_array.comp'..
deqp-vk: ../mesa/src/amd/compiler/aco_register_allocation.cpp:1399: aco::PhysReg aco::{anonymous}::get_reg_create_vector(aco::{anonymous}::ra_ctx&, aco::{anonymous}::RegisterFile&, aco::Temp, std::vector<std::pair<aco::Operand, aco::Definition> >&, aco::aco_ptr<aco::Instruction>&): Assertion `success' failed.
Aborted (core dumped)
On NAVI10 with latest master (1d71b1a3) and passes on LLVM.