aco: repeat get_reg_create_vector() with increased register demand if fail

We don't need rollback/undo code here because get_reg_create_vector() now
creates a temporary copy of the register file.

Works around RA failure with a bunch of dEQP-VK.robustness.robustness2.*

Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Reviewed-by: Daniel Schürmann <daniel@schuermann.dev>
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/3566
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7656>